# Enterprise-Helpdesk-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  plan.txt  pyproject.toml  requirements.txt
app/: config.py
app/agent/: agent.py
app/api/: routes.py
app/db/: database.py  mock_db.py
app/memory/: session.py
app/models/: schemas.py
app/tools/: business_tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  Header.jsx  TicketSidebar.jsx  ToolPanel.jsx
frontend/src/services/: api.js
tests/: test_routes.py
