[project]
name = "fluidai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain==0.3.25",
    "langchain-community==0.3.23",
    "langchain-core==0.3.59",
    "langchain-groq==0.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
